syntax = "proto3";

package payment.stripe;

message StripePaymentSession {
  string session_id = 1;
  string public_key = 2;
  string url = 3; // Stripe hosted checkout URL (optional)
  int64 amount = 21; // Amount in the smallest unit (e.g., cents)
  string currency = 22; // I
}

message StripeVerifyRequest {
  string session_id = 1;
}

message StripeVerifyResponse {
  string payment_intent_id = 1;
  bool verified = 2;
}
